COLORES  DE LA INTERFAZ

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						</div>
 						<div id="escenario">
 							<pre><h3 id="pointer">       <i class="fa fa-file-text-o"></i> INTRODUCCION</h3> </pre>
-							<p>Ubique el cursor del mouse sobre los recuadros para observar los objetivos.</p><img src="indicacion1.png"/> 
+							<p>Lea detenidamente la introducción sobre el tema.</p>
 							<div id="contenidoGeneral">
 								<div class="has-animation animation-ltr" data-delay="10">
 									<p id="bigger"><span>PROCESAMIENTO DE DATOS<BR> ARBITRARIAMENTE GRANDES</span></p>
