--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
 						</div>
 						<div id="escenario">
-							<pre><h3 id="pointer">       <i class="fa fa-file-text-o"></i> INTRODUCCION</h3> </pre>
+							<pre><h3 id="pointer">       <i class="fa fa-file-text-o"></i> INTRODUCCIÓN</h3> </pre>
 							<p>Lea detenidamente la introducción sobre el tema.</p>
 							<div id="contenidoGeneral">
 								<div class="has-animation animation-ltr" data-delay="10">
