--- a/tema2.html
+++ b/tema2.html
@@ -701,11 +701,32 @@
         </div>
         <!-- ITEM 3-->
         <div class='css3-tab-content add-new'>
-            <!-- start slipsum code -->
-            <h1>Add New</h1>
-            Integer elementum massa at nulla placerat varius. Suspendisse in libero risus, in interdum massa. Vestibulum ac leo vitae metus faucibus gravida ac in neque. Nullam est eros, suscipit sed dictum quis, accumsan a ligula. In sit amet justo lectus. Etiam feugiat dolor ac elit suscipit in elementum orci fringilla. Aliquam in felis eros. Praesent hendrerit lectus sit amet turpis tempus hendrerit. Donec laoreet volutpat molestie. Praesent tempus dictum nibh ac ullamcorper. Sed eu consequat nisi. Quisque ligula metus, tristique eget euismod at, ullamcorper et nibh. Duis ultricies quam egestas nibh mollis in ultrices turpis pharetra. Vivamus et volutpat mi. Donec nec est eget dolor laoreet iaculis a sit amet diam.
-            <h2>Donec malesuada vehicula</h2>
+           <div class="box">
+  <div class="textbox"> 
+    El propósito de una expresión local es definir una variable, una función o una estructura para la evaluación <br>de la expresión del cuerpo. Fuera de la expresión local, las definiciones no tienen ningún efecto. 
+    <br>Considere las siguientes expresiones:
+</div> 
+</div>
+<img id="uno" src="uno.png" />
+<img id="dos" src="dos.png" />
+            <p id="subtitulo6"><span>(local ((define (f x) exp-1)) exp)</span></p>
+            <p id="subtitulo7"><span>(local ((define PI 3)) exp)</span></p>
+            <div class="card3 card-secondary3">
+                Define la función f durante la evaluación de exp. El resultado de exp es el resultado de toda la expresión local.
+              </div>
+              <div class="card4 card-secondary4">
+                Permite temporalmente que la PI variable represente 3 durante la evaluación de exp.
+              </div>
+              <div class="arrow3">
+              <div class="arrow-part3"></div>
+              <div class="arrow-part3"></div>
+            </div>
+            <div class="arrow4">
+              <div class="arrow-part4"></div>
+              <div class="arrow-part4"></div>
+            </div>
         </div>
+        
     </div>
     </article>                 
 </section>
