CAMBIO DE COLORES INTERFAZ Y SUBTITULOS

--- a/tema2.html
+++ b/tema2.html
@@ -709,8 +709,8 @@
 </div>
 <img id="uno" src="uno.png" />
 <img id="dos" src="dos.png" />
-            <p id="subtitulo6"><span>(local ((define (f x) exp-1)) exp)</span></p>
-            <p id="subtitulo7"><span>(local ((define PI 3)) exp)</span></p>
+            <p id="subLocal1"><span>(local ((define (f x) exp-1)) exp)</span></p>
+            <p id="subLocal2"><span>(local ((define PI 3)) exp)</span></p>
             <div class="card3 card-secondary3">
                 Define la función f durante la evaluación de exp. El resultado de exp es el resultado de toda la expresión local.
               </div>
