--- a/objetivos.html
+++ b/objetivos.html
@@ -55,7 +55,7 @@
               </div>
               <div class="back2">
                 <h3 class="synopsis2">OBJETIVO 2</h3>
-                <p id="objetivo2"><span> The series follows the misadventures of alcoholic scientist Rick and his easily influenced grandson Morty, who split their time between domestic family life and interdimensional travel.</span></p>
+                <p id="objetivo2"><span>Fortalecer el tema de Definiciones Locales en DrRacket.</span></p>
               </div>
             </div>
             </div>
