--- a/tema2.html
+++ b/tema2.html
@@ -701,7 +701,7 @@
         </div>
         <!-- ITEM 3-->
         <div class='css3-tab-content add-new'>
-          <div class="box">
+          <div class="boxes">
             <div class="textbox"> 
               El propósito de una expresión local es definir una variable, una función o una estructura para la evaluación <br>de la expresión del cuerpo. Fuera de la expresión local, las definiciones no tienen ningún efecto. 
               <br>Considere las siguientes expresiones:
