--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<div class="content">
 								<h5><i class="fa fa-file-text-o"></i> Introducción <i class="fa fa-chevron-down"></i></h5>
 								<ul>
-									<a href="index.html"><li><i></i> Introducción</li></a>
+									<li id="itemIntro"><i></i>Introducción</li>
 								</ul>
 								<h5><i class="fa fa-list"></i> Objetivos <i class="fa fa-chevron-down"></i></h5>
 								<ul>
@@ -57,7 +57,9 @@
 								</ul>
 								<h5><i class="fa fa-edit"></i> Actividad <i class="fa fa-chevron-down"></i></h5>
 								<ul>
-									<li id="itemActividad"><i></i> Actividad</li>
+									<li id="itemActividad1"><i></i> Actividad 1</li>
+									<li id="itemActividad2"><i></i> Actividad 2</li>
+									<li id="itemActividad3"><i></i> Actividad 3</li>
 								</ul>
 								<h5><i class="fa fa-star-o"></i> Feedback <i class="fa fa-chevron-down"></i></h5>
 								<ul>
@@ -66,10 +68,6 @@
 								<h5><i class="fa fa-check-square-o"></i> Evaluación <i class="fa fa-chevron-down"></i></h5>
 								<ul>
 									<li><a><i></i> Evaluación</a></li>
-								</ul>
-								<h5><i class="fa fa-paste"></i> Calificaciones <i class="fa fa-chevron-down"></i></h5>
-								<ul>
-									<li><a><i></i> Calificaciones</a></li>
 								</ul>
 							</div>
 						</div>
