--- a/objetivos.html
+++ b/objetivos.html
@@ -13,6 +13,9 @@
 
     <body>
         <div id="content">
+           <div id="loader">
+              <div class="count">100%</div>
+            </div>
             <div id ="cabecera">
               <img src="iconoPrin2.png"/>
               <pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
