--- a/tema2.html
+++ b/tema2.html
@@ -14,6 +14,9 @@
 
 <body>
   <div id="content">
+            <div id="loader">
+          <div class="count">100%</div>
+        </div>
     <div id ="cabecera">
       <img src="iconoPrin2.png"/>
       <pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
@@ -709,6 +712,7 @@
 <div class="menu--shadow"></div>
 </div>
 <script src="tema2.js"></script>
+<script type="page.js"></script>
 <script src="boton.js"></script>
 <script src="indexPestaña4.js"></script>
 <script src="lightbox.js"></script>
