--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 						<div class="box">
 							<div class="profile"></div>
 							<div class="content">
+								
 								<h5><i class="fa fa-file-text-o"></i> Introducción <i class="fa fa-chevron-down"></i></h5>
 								<ul>
 									<li id="itemIntro"><i></i>Introducción</li>
@@ -73,6 +74,9 @@
 						</div>
 					</div>
 					<div id="content" class="intro">
+						 <div id="loader">
+							         <div class="count">100%</div>
+							      </div>
 						<div id="cabecera">
 							<img src="iconoPrin2.png"/>
 							<pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
@@ -107,3 +111,4 @@
 </section>
 </div>
 <script type="text/javascript" src="_style_js.js"></script></body></html>
+<script type="page.js"></script>
