--- a/objetivos.html
+++ b/objetivos.html
@@ -13,9 +13,11 @@
 
     <body>
         <div id="content">
-           <div id="loader">
-              <div class="count">100%</div>
-            </div>
+          
+        <div id="loader">
+          <div class="count">100%</div>
+        </div>
+
             <div id ="cabecera">
               <img src="iconoPrin2.png"/>
               <pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
@@ -67,5 +69,6 @@
         </div>
                 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
           <script  src="objetivos.js"></script>
+          <script src="page.js"></script>
     </body>
 </html>
