--- a/tema2.html
+++ b/tema2.html
@@ -713,7 +713,7 @@
 <div class="menu--shadow"></div>
 </div>
 <script src="tema2.js"></script>
-<script type="page.js"></script>
+<script src="page.js"></script>
 <script src="boton.js"></script>
 <script src="indexPestaña4.js"></script>
 <script src="lightbox.js"></script>
