--- a/actividad1.html
+++ b/actividad1.html
@@ -38,13 +38,14 @@ and open the template in the editor.
         <div id="contenidoGeneral">
 
             <div id="ardoraMain">
+              <p id="titulo2"><span>CONSTRUYE LA PALABRA CORRESPONDIENTE A LA DEFINICIÓN DADA</span></p>
 <audio id="audioFelicitacion">
 <source src="palabras_resources/media/correct-ding.mp3" type="audio/mp3">
 </audio>
 <audio id="audioErro">
 <source src="palabras_resources/media/perder-incorrecto-no-valido.mp3" type="audio/mp3">
 </audio>
-<div id="ardoraEnu"><SPAN style="font-size:20px;color: #ff00ff"><b>CONSTRUYE LA PALABRA CORRESPONDIENTE A LA DEFINICIÓN DADA</b></SPAN><br><SPAN style="font-size:16px;color:#000000">(<b>Nota:</b> Ten en cuenta los espacios entre algunas palabras). </SPAN></div>
+<div id="ardoraEnu"><SPAN style="font-size:16px;color:#000000">(<b>Nota:</b> Ten en cuenta los espacios entre algunas palabras). </SPAN></div>
 <div id="nota"><span><b>Definición:</b></span></div>
 <div id="help_div"></div>
 <div id="contentdiv">
