--- a/tema2.html
+++ b/tema2.html
@@ -81,7 +81,7 @@
              </div>
              <!-- BOTON DEL EJEMPLO --> 
              <div class="popup_main">
-              <button class="open_popup">Ej.</button>
+              <div class="open_popup">Ej.</div>
               <div class="popup_body">
                 <div class="popup_back"></div>
                 <div class="popup_contain">
