--- a/actividad3.html
+++ b/actividad3.html
@@ -70,7 +70,7 @@ and open the template in the editor.
             <article id="item-2" class="menu__item">
 
             	 <div class="box-shadow">Tenemos una actividad práctica para ti, oprime el botón ACTIVIDAD.</div>
-             <button class="btn btn-after btn-animated" type="button" onclick="window.open('http://192.168.1.4/moodle/mod/vpl/view.php?id=53'); " target="_blank">ACTIVIDAD</button>
+             <div class="btn btn-after btn-animated" type="button" onclick="window.open('http://192.168.1.9/moodle/mod/vpl/view.php?id=64'); " target="_blank">ACTIVIDAD</div>
 		<div class="comp">
 			<div class="monitor">
 				<div class="mid">
