--- a/objetivos.html
+++ b/objetivos.html
@@ -67,6 +67,7 @@
 
           </div>
         </div>
+        </div>
                 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
           <script  src="objetivos.js"></script>
           <script src="page.js"></script>
