--- a/actividad2.html
+++ b/actividad2.html
@@ -23,87 +23,88 @@ and open the template in the editor.
 </head>
 <body>
 	<div id="content">
-         <div id="loader">
-          <div class="count">100%</div>
-      </div>
-      <div id ="cabecera">
-      	<img src="iconoPrin2.png"/>
-      	<pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
-      </div>
+		<div id="loader">
+			<div class="count">100%</div>
+		</div>
+		<div id ="cabecera">
+			<img src="iconoPrin2.png"/>
+			<pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
+		</div>
 
-      <div id="escenario">
-      	<pre><h3 id="pointer">    <i class="fa fa-edit"></i> ACTIVIDAD 2</h3> </pre>
-      	<p>Ubique el cursor del mouse sobre los recuadros para observar los objetivos.</p><img src="indicacion1.png"/> 
+		<div id="escenario">
+			<pre><h3 id="pointer">    <i class="fa fa-edit"></i> ACTIVIDAD 2</h3> </pre>
+			<p>De clic sobre un recuadro para ver su contenido.</p><img id="indicacion1" 
+			src="indicacion1.png"/> 
 
-      	<div id="contenidoGeneral">
+			<div id="contenidoGeneral">
 
-      		<div id="ardoraMain">
-                        <p id="titulo2"><span>EMPAREJA UNA PALABRA CON SU DEFINICIÓN</span></p>
-                         
-      			<audio id="audioFelicitacion">
-      				<source src="MEMORIA_resources/media/bien-hecho.mp3" type="audio/mp3">
-      				</audio>
-      				<div id="ardoraEnu"></div>
-      				<div id="ardoraAct">
-      					<div id="ima11" class="imaCell">
-      						<div id="ima11_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima12" class="imaCell">
-      						<div id="ima12_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima13" class="imaCell">
-      						<div id="ima13_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima14" class="imaCell">
-      						<div id="ima14_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima21" class="imaCell">
-      						<div id="ima21_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima22" class="imaCell">
-      						<div id="ima22_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima23" class="imaCell">
-      						<div id="ima23_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima24" class="imaCell">
-      						<div id="ima24_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima31" class="imaCell">
-      						<div id="ima31_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima32" class="imaCell">
-      						<div id="ima32_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima33" class="imaCell">
-      						<div id="ima33_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima34" class="imaCell">
-      						<div id="ima34_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima41" class="imaCell">
-      						<div id="ima41_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima42" class="imaCell">
-      						<div id="ima42_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima43" class="imaCell">
-      						<div id="ima43_img" class="imaCell_img"></div>
-      					</div>
-      					<div id="ima44" class="imaCell">
-      						<div id="ima44_img" class="imaCell_img"></div>
-      					</div>
-      					<canvas id="ardoraActCanvas" width="2px" height="2px"></canvas>
-      				</div>
-      				<div id="ardoraTab">
-      				</div></div>
+				<div id="ardoraMain">
+					<p id="titulo2"><span>EMPAREJA UNA PALABRA CON SU DEFINICIÓN</span></p>
+					
+					<audio id="audioFelicitacion">
+						<source src="MEMORIA_resources/media/bien-hecho.mp3" type="audio/mp3">
+						</audio>
+						<div id="ardoraEnu"></div>
+						<div id="ardoraAct">
+							<div id="ima11" class="imaCell">
+								<div id="ima11_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima12" class="imaCell">
+								<div id="ima12_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima13" class="imaCell">
+								<div id="ima13_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima14" class="imaCell">
+								<div id="ima14_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima21" class="imaCell">
+								<div id="ima21_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima22" class="imaCell">
+								<div id="ima22_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima23" class="imaCell">
+								<div id="ima23_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima24" class="imaCell">
+								<div id="ima24_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima31" class="imaCell">
+								<div id="ima31_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima32" class="imaCell">
+								<div id="ima32_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima33" class="imaCell">
+								<div id="ima33_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima34" class="imaCell">
+								<div id="ima34_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima41" class="imaCell">
+								<div id="ima41_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima42" class="imaCell">
+								<div id="ima42_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima43" class="imaCell">
+								<div id="ima43_img" class="imaCell_img"></div>
+							</div>
+							<div id="ima44" class="imaCell">
+								<div id="ima44_img" class="imaCell_img"></div>
+							</div>
+							<canvas id="ardoraActCanvas" width="2px" height="2px"></canvas>
+						</div>
+						<div id="ardoraTab">
+						</div></div>
 
-      			</div>
-      		</div>
+					</div>
+				</div>
 
-      		<script  src="actividad.js"></script>
-      		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-      		<script  src="page.js"></script>
+				<script  src="actividad.js"></script>
+				<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+				<script  src="page.js"></script>
 
-      	</body>
-      	</html>
+			</body>
+			</html>
