--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="exe_effects.css" />
 	<link rel="stylesheet" type="text/css" href="content.css" />
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<style type="text/css" media="screen">@import 'style.css';</style>
 	<link href="https://fonts.googleapis.com/css?family=Sansita:400,400i,700,700i,800,800i,900,900i" rel="stylesheet">
 
 	<script type="text/javascript" src="exe_effects.js"></script>
@@ -104,5 +105,4 @@
 	</article>
 </section>
 </div>
-<script type="text/javascript" src="_style_js.js"></script></body></html>
 <script type="page.js"></script>
